fix: add "position: fixed" to modal window and "overflow: hidden" to body so that modal window displayed normally

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,6 @@ body {
 }
 
 #root {
-  position: relative;
   min-height: 100vh;
   width: 100%;
 }
